@startuml Database_Schema_ERD
!define Table(name,desc) class name as "name" << (T,#FFAAAA) >>
!define PrimaryKey(x) <b><color:red>x</color></b>
!define ForeignKey(x) <color:blue>x</color>
!define NotNull(x) <color:green>x</color>

title Database Schema - Entity Relationship Diagram

package "PostgreSQL - User & Admin Data" {
    Table(Users, "User Profiles") {
        PrimaryKey(id): UUID
        NotNull(user_id): VARCHAR(255) -- Keycloak ID
        NotNull(email): VARCHAR(255)
        NotNull(first_name): VARCHAR(100)
        NotNull(last_name): VARCHAR(100)
        role: VARCHAR(20) -- ENUM
        status: VARCHAR(20) -- ENUM
        age: INTEGER
        gender: VARCHAR(20) -- ENUM
        height: DECIMAL(5,2) -- cm
        weight: DECIMAL(5,2) -- kg
        fitness_goals: TEXT
        activity_level: VARCHAR(20)
        onboarding_completed: BOOLEAN
        onboarding_step: VARCHAR(50)
        status_reason: TEXT
        last_login_at: TIMESTAMP
        created_at: TIMESTAMP
        updated_at: TIMESTAMP
    }

    Table(ContactMessages, "Support Messages") {
        PrimaryKey(id): UUID
        ForeignKey(user_id): VARCHAR(255)
        NotNull(name): VARCHAR(100)
        NotNull(email): VARCHAR(255)
        NotNull(subject): VARCHAR(200)
        NotNull(message): TEXT
        status: VARCHAR(20) -- ENUM
        priority: VARCHAR(20) -- ENUM
        assigned_to: VARCHAR(255)
        created_at: TIMESTAMP
        updated_at: TIMESTAMP
    }

    Table(AdminAuditLog, "Admin Actions") {
        PrimaryKey(id): UUID
        ForeignKey(admin_user_id): VARCHAR(255)
        ForeignKey(target_user_id): VARCHAR(255)
        action: VARCHAR(100)
        details: JSONB
        ip_address: INET
        created_at: TIMESTAMP
    }
}

package "MongoDB - Activity & AI Data" {
    note as ActivityNote
        <b>Activities Collection</b>
        {
          "_id": ObjectId,
          "userId": String,
          "name": String,
          "type": String, // CARDIO, STRENGTH, etc.
          "category": String,
          "duration": Number, // minutes
          "caloriesBurned": Number,
          "distance": Number, // km
          "steps": Number,
          "heartRate": Number, // avg BPM
          "exercises": [{ // For strength training
            "name": String,
            "sets": [{
              "reps": Number,
              "weight": Number,
              "duration": Number
            }]
          }],
          "location": String,
          "weather": Object,
          "notes": String,
          "intensity": Number, // 1-10
          "mood": String,
          "date": ISODate,
          "createdAt": ISODate,
          "source": String, // MANUAL, DEVICE_SYNC
          "metadata": Object
        }
    end note

    note as InsightsNote
        <b>User Insights Collection</b>
        {
          "_id": ObjectId,
          "userId": String,
          "weeklyCaloriesBurned": Number,
          "averageWorkoutDuration": Number,
          "preferredActivityTypes": [String],
          "progressToGoals": {
            "weightLoss": Number,
            "strengthGain": Number,
            "endurance": Number
          },
          "recommendations": [String],
          "achievements": [{
            "type": String,
            "title": String,
            "description": String,
            "earnedAt": ISODate
          }],
          "fitnessScore": {
            "overall": Number,
            "cardio": Number,
            "strength": Number,
            "consistency": Number
          },
          "generatedAt": ISODate,
          "expiresAt": ISODate // TTL
        }
    end note

    note as RecommendationsNote
        <b>Recommendations Collection</b>
        {
          "_id": ObjectId,
          "userId": String,
          "type": String, // EXERCISE, NUTRITION, RECOVERY
          "category": String,
          "title": String,
          "description": String,
          "priority": Number, // 1-5
          "personalizedFor": {
            "fitnessLevel": String,
            "goals": [String],
            "preferences": Object
          },
          "validUntil": ISODate,
          "viewCount": Number,
          "actionTaken": Boolean,
          "createdAt": ISODate
        }
    end note
}

package "Redis - Cache Structure" {
    note as CacheNote
        <b>Redis Key Patterns</b>
        
        <b>User Profiles:</b>
        user:{userId} -> UserResponse JSON
        TTL: 1 hour
        
        <b>Activity Statistics:</b>
        user_activity_stats:{userId} -> Stats JSON
        TTL: 15 minutes
        
        <b>Recommendations:</b>
        recommendations:{userId} -> List<Recommendation>
        TTL: 2 hours
        
        <b>Session Data:</b>
        session:{sessionId} -> User context
        TTL: 30 minutes
        
        <b>Rate Limiting:</b>
        rate_limit:{userId}:{endpoint} -> Request count
        TTL: 1 minute
    end note
}

' Relationships
Users ||--o{ ContactMessages : "user_id"
Users ||--o{ AdminAuditLog : "target_user_id"
Users ||--o{ AdminAuditLog : "admin_user_id"

@enduml